@@ -26,7 +26,11 @@
 :args Idle
 	*		args
 	";[{\n"		reset
+	"\\"		quote		recolor=-1
 	"\""		string		recolor=-1
+
+:quote Escape
+	*		args
 
 :string Constant
 	*		string
