@@ -1,3 +1,7 @@
+- Syntax highlighter definition files (.jsf files) can now have subroutines. 
+  This eases highlighter reuse: for example, Mason and PHP can share an HTML
+  highlighter.
+
 - I've changed the way JOE handles '-' and redirected input:
 
 	joe < file		A shell process is started which 'cat's the
